# LLM-EdTech

backend/: .gitignore  config.yaml  main.py  pyproject.toml
backend/core/: celery_config.py  config.py  database.py  supabase_client.py
backend/core/factories/: database_factory.py  embedding_factory.py  llm_factory.py  storage_factory.py  storage_provider.py  vector_store_factory.py
backend/core/utils/: logger.py
backend/database/: base.py  postgres.py
backend/entities/: user.py
backend/middleware/: auth.py
backend/models/: HenryDoc.py  __init__.py  classroom.py  cousre.py  document.py  henry_doc.py  quizz.py  role.py  user.py  user_classroom.py  user_course.py
backend/routes/: __init__.py  auth_routes.py  chat_rotues.py  classroom_routes.py  course_routes.py  embedding_routes.py  ingestion_routes.py  quizz_routes.py  role_routes.py
backend/schemas/: auth.py  classroom.py  course.py  schemas.py
backend/services/: auth_service.py  classroom_service.py  course_service.py  role_service.py
backend/services/embedding/: embedding_service.py
backend/services/ingestion/: ingestion_service.py  loader.py
backend/services/quizz/: quizz_service.py
backend/services/retrieval/: __init__.py  base.py  default.py  factory.py  retriever.py
backend/services/splitting/: splitter.py
backend/services/storage/: base.py  supabase_storage.py
backend/services/vector_store/: __init__.py  base.py  pgvector.py  vector_store_service.py
backend/supabase/migrations/: 20250929110314_documents.sql  (+8 more)
backend/tasks/: parsing_tasks.py
backend/utils/: appError.py
(+64 files in other folders)
